--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
       - run: nimble install -Y
       - run: nimble doc --docCmd:skip --index:on --project --git.url:https://github.com/${{ github.repository }} --git.commit:main  --out:${{ env.deploy-dir }} ${{ env.nim-src }}
       - name: "Copy to index.html"
-        run: cp ${{ env.deploy-dir }}/${{ github.event.repository.name }}.html ${{ env.deploy-dir }}/index.html
+        run: cp ${{ env.deploy-dir }}/delaunator.html ${{ env.deploy-dir }}/index.html
       - name: Deploy documents
         uses: peaceiris/actions-gh-pages@v3
         with:
